Allow component-updated Flash to override the placeholder fake Flash even if the version is lower.

BUG=642323

Committed: https://crrev.com/83b20171219860f0a34b4086be7e9fbd788074b7 [formerly 30f12cd92e58dddfd196e72356aea5abefacaf4d]
Review-Url: https://codereview.chromium.org/2298343002
Cr-Original-Commit-Position: refs/heads/master@{#415781}
Cr-Commit-Position: refs/heads/master@{#415811}

Former-commit-id: df37d85863495afc85ba5f0d429fca1d0643eb62